# task-manager

./: Dockerfile  docker-compose.yml  pyproject.toml
migrations/versions/: 1275f0aa6432_add_description_to_projects.py  c7934e45feeb_initial_tables.py
src/api/: auth.py  dependencies.py  project.py  users.py
src/schemas/: user.py
src/storage/db/: repositories.py
src/storage/db/model/: models.py
